--- a/analysis/file_folder_analysis_baseline.ipynb
+++ b/analysis/file_folder_analysis_baseline.ipynb
@@ -25,7 +25,10 @@
     "dir_path = '../results/Baseline/PACS/PReNet'\n",
     "# dir_path = '../results/Baseline/PACS/RoSAS'\n",
     "# dir_path = '../results/Baseline/PACS/DeepSAD'\n",
-    "# dir_path = '../results/Baseline/PACS_contamination/DeepSAD'"
+    "# dir_path = '../results/Baseline/PACS_contamination/DeepSAD'\n",
+    "dir_path = '../results/Baseline/MVTEC/RoSAS'\n",
+    "# dir_path = '../results/Baseline/MVTEC/RoSAS'\n",
+    "# dir_path = '../results/Baseline/MVTEC/DeepSAD'"
    ]
   },
   {
@@ -77,212 +80,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1260\n"
+      "2692\n"
      ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>contamination_rate</th>\n",
-       "      <th>normal_class</th>\n",
-       "      <th>anomaly_class</th>\n",
-       "      <th>lr</th>\n",
-       "      <th>epochs</th>\n",
-       "      <th>batch_size</th>\n",
-       "      <th>cnt</th>\n",
-       "      <th>val_AUROC</th>\n",
-       "      <th>photo_AUROC</th>\n",
-       "      <th>art_painting_AUROC</th>\n",
-       "      <th>cartoon_AUROC</th>\n",
-       "      <th>sketch_AUROC</th>\n",
-       "      <th>val_AUPRC</th>\n",
-       "      <th>photo_AUPRC</th>\n",
-       "      <th>art_painting_AUPRC</th>\n",
-       "      <th>cartoon_AUPRC</th>\n",
-       "      <th>sketch_AUPRC</th>\n",
-       "      <th>file_name</th>\n",
-       "      <th>AUROC_mean</th>\n",
-       "      <th>AUPRC_mean</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1 2 3 4 5 6</td>\n",
-       "      <td>0.00010</td>\n",
-       "      <td>40</td>\n",
-       "      <td>32</td>\n",
-       "      <td>3</td>\n",
-       "      <td>0.900794</td>\n",
-       "      <td>1.000000</td>\n",
-       "      <td>0.873333</td>\n",
-       "      <td>0.744589</td>\n",
-       "      <td>0.824675</td>\n",
-       "      <td>0.770707</td>\n",
-       "      <td>1.000000</td>\n",
-       "      <td>0.521176</td>\n",
-       "      <td>0.469247</td>\n",
-       "      <td>0.368845</td>\n",
-       "      <td>method=0,backbone=PReNet,domain_cnt=3,normal_c...</td>\n",
-       "      <td>0.860649</td>\n",
-       "      <td>0.589817</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>0.0</td>\n",
-       "      <td>4</td>\n",
-       "      <td>0 1 2 3 5 6</td>\n",
-       "      <td>0.00010</td>\n",
-       "      <td>60</td>\n",
-       "      <td>32</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0.906130</td>\n",
-       "      <td>0.854701</td>\n",
-       "      <td>0.966667</td>\n",
-       "      <td>0.768229</td>\n",
-       "      <td>0.798569</td>\n",
-       "      <td>0.799475</td>\n",
-       "      <td>0.858333</td>\n",
-       "      <td>0.830159</td>\n",
-       "      <td>0.377646</td>\n",
-       "      <td>0.517409</td>\n",
-       "      <td>method=0,backbone=PReNet,domain_cnt=3,normal_c...</td>\n",
-       "      <td>0.847041</td>\n",
-       "      <td>0.645887</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>0.0</td>\n",
-       "      <td>5</td>\n",
-       "      <td>0 1 2 3 4 6</td>\n",
-       "      <td>0.00005</td>\n",
-       "      <td>60</td>\n",
-       "      <td>128</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0.997182</td>\n",
-       "      <td>1.000000</td>\n",
-       "      <td>1.000000</td>\n",
-       "      <td>0.991228</td>\n",
-       "      <td>0.854167</td>\n",
-       "      <td>0.981566</td>\n",
-       "      <td>1.000000</td>\n",
-       "      <td>1.000000</td>\n",
-       "      <td>0.944444</td>\n",
-       "      <td>0.827778</td>\n",
-       "      <td>method=0,backbone=PReNet,domain_cnt=3,normal_c...</td>\n",
-       "      <td>0.961349</td>\n",
-       "      <td>0.943056</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0 2 3 4 5 6</td>\n",
-       "      <td>0.00001</td>\n",
-       "      <td>60</td>\n",
-       "      <td>64</td>\n",
-       "      <td>2</td>\n",
-       "      <td>0.902588</td>\n",
-       "      <td>1.000000</td>\n",
-       "      <td>0.931373</td>\n",
-       "      <td>0.917582</td>\n",
-       "      <td>0.639640</td>\n",
-       "      <td>0.538866</td>\n",
-       "      <td>1.000000</td>\n",
-       "      <td>0.711111</td>\n",
-       "      <td>0.432190</td>\n",
-       "      <td>0.379407</td>\n",
-       "      <td>method=0,backbone=PReNet,domain_cnt=3,normal_c...</td>\n",
-       "      <td>0.872149</td>\n",
-       "      <td>0.630677</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>0.0</td>\n",
-       "      <td>6</td>\n",
-       "      <td>0 1 2 3 4 5</td>\n",
-       "      <td>0.00001</td>\n",
-       "      <td>20</td>\n",
-       "      <td>64</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0.908846</td>\n",
-       "      <td>1.000000</td>\n",
-       "      <td>0.930712</td>\n",
-       "      <td>0.884774</td>\n",
-       "      <td>0.869792</td>\n",
-       "      <td>0.401009</td>\n",
-       "      <td>1.000000</td>\n",
-       "      <td>0.444444</td>\n",
-       "      <td>0.574641</td>\n",
-       "      <td>0.629471</td>\n",
-       "      <td>method=0,backbone=PReNet,domain_cnt=3,normal_c...</td>\n",
-       "      <td>0.921319</td>\n",
-       "      <td>0.662139</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   contamination_rate normal_class anomaly_class       lr  epochs  batch_size  \\\n",
-       "0                 0.0            0   1 2 3 4 5 6  0.00010      40          32   \n",
-       "1                 0.0            4   0 1 2 3 5 6  0.00010      60          32   \n",
-       "2                 0.0            5   0 1 2 3 4 6  0.00005      60         128   \n",
-       "3                 0.0            1   0 2 3 4 5 6  0.00001      60          64   \n",
-       "4                 0.0            6   0 1 2 3 4 5  0.00001      20          64   \n",
-       "\n",
-       "   cnt  val_AUROC  photo_AUROC  art_painting_AUROC  cartoon_AUROC  \\\n",
-       "0    3   0.900794     1.000000            0.873333       0.744589   \n",
-       "1    1   0.906130     0.854701            0.966667       0.768229   \n",
-       "2    1   0.997182     1.000000            1.000000       0.991228   \n",
-       "3    2   0.902588     1.000000            0.931373       0.917582   \n",
-       "4    0   0.908846     1.000000            0.930712       0.884774   \n",
-       "\n",
-       "   sketch_AUROC  val_AUPRC  photo_AUPRC  art_painting_AUPRC  cartoon_AUPRC  \\\n",
-       "0      0.824675   0.770707     1.000000            0.521176       0.469247   \n",
-       "1      0.798569   0.799475     0.858333            0.830159       0.377646   \n",
-       "2      0.854167   0.981566     1.000000            1.000000       0.944444   \n",
-       "3      0.639640   0.538866     1.000000            0.711111       0.432190   \n",
-       "4      0.869792   0.401009     1.000000            0.444444       0.574641   \n",
-       "\n",
-       "   sketch_AUPRC                                          file_name  \\\n",
-       "0      0.368845  method=0,backbone=PReNet,domain_cnt=3,normal_c...   \n",
-       "1      0.517409  method=0,backbone=PReNet,domain_cnt=3,normal_c...   \n",
-       "2      0.827778  method=0,backbone=PReNet,domain_cnt=3,normal_c...   \n",
-       "3      0.379407  method=0,backbone=PReNet,domain_cnt=3,normal_c...   \n",
-       "4      0.629471  method=0,backbone=PReNet,domain_cnt=3,normal_c...   \n",
-       "\n",
-       "   AUROC_mean  AUPRC_mean  \n",
-       "0    0.860649    0.589817  \n",
-       "1    0.847041    0.645887  \n",
-       "2    0.961349    0.943056  \n",
-       "3    0.872149    0.630677  \n",
-       "4    0.921319    0.662139  "
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -325,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -352,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -377,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -396,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -410,7 +209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -424,7 +223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -456,7 +255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -563,7 +362,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -572,7 +371,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -585,7 +384,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
